<resources>
    <string name="app_name">u-chooz</string>
    <string name="Uchoozdesc">Uchoozdesc</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_maps3">Map</string>


    <!--Contact Form-->

    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your first Name</string>
    <string name="contact_form_name2">Your last Name</string>
    <string name="contact_form_email">Your Email address</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="sendrequest2">Send request</string>
    <string name="sendrequest1">Send Message</string>
    <string name="contact_form_post_message">Please wait... We are sending your message to the correct team </string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="Subway">subway</string>
    <string name="Train">train</string>
    <string name="Bus">bus</string>
    <string name="TAXI">taxi</string>
    <string name="Restautant">rest-b</string>
    <string name="B_parking">parking</string>
    <string name="TAXI2">Taxi</string>
    <string name="Bus1">bus</string>
    <string name="Bus3">bus</string>
    <string name="Train3">train</string>
    <string name="B_parking3">parking</string>
    <string name="Subway3">subway</string>
    <string name="contact_form_button2">post message</string>
    <string name="contact_form_message2">contact form message 2</string>
    <string name="contact_form_subject2">contact form subject 2</string>
    <string name="Museum">Museum</string>
    <string name="takeaway">takeaway</string>
    <string name="delivery">Delivery</string>
    <string name="Bakery">Bakery</string>
    <string name="Bars">Bars</string>
    <string name="Search">Search</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="Parks">parks</string>
    <string name="Bowling">Bowling</string>
    <string name="Amusements">amusements</string>
    <string name="Spas">spa\'s</string>
    <string name="Shopping">shopping</string>
    <string name="aquarium">aquarium</string>


</resources>
