<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivitycontact">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_name"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/yourfirstname"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_name2"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/yourlastname"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_email"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/youremail"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="14sp" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_subject"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/yoursubject"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_message"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/yourmessage"
            android:layout_width="fill_parent"
            android:layout_height="67dp"
            android:layout_marginBottom="20dp"
            android:height="180dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textSize="14sp" />

        <Button
            android:id="@+id/postmessage"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:background="#b30000"
            android:paddingBottom="1dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="1dp"
            android:text="@string/sendrequest1"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="13sp" />




    </LinearLayout>


</LinearLayout>

